2007-10-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/resmgr.hxx:
	* source/ui/resmgr.cxx: modified parser to skip the leading number in 
	each line.  We now pick up all *.properties files found in the 
	translation directory instead of hardcoding file names to pick up.
	Mapping of the old numeric resource IDs to the new string resource names
	is complete.  The dialogs now use string values pulled directly from the
	dialog properties files.
	
	* workben/addon_pkg/translation/SolverDialog_en_US.properties: completed
	en-US locale strings.
	
2007-10-25  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/resmgr.hxx:
	* source/ui/resmgr.cxx: added mapping of new resource names to old
	numerical resource IDs.

	* source/service/service.cxx: get dialog strings from the new string
	manager for testing.
	
	* workben/addon_pkg/translation/en-US.txt: removed.
	
	* workben/addon_pkg/translation/SolverDialog_en_US.properties: added 
	more translated texts.

2007-10-15  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/resmgr.hxx:
	* source/ui/resmgr.cxx: added code to parse the dialog properties files.
	
	* workben/addon_pkg/translation/SolverDialog_en_US.properties:
	* workben/addon_pkg/translation/SolverDialog_ja_JP.properties: added 
	test translation files.

2007-10-14  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/resmgr.hxx:
	* source/ui/resmgr.cxx: more file parser code & renamed some functions.
	
	* source/inc/unoglobal.hxx:
	* source/ui/unoglobal.cxx: asciiAny added & more const correctness.
	
	* source/service/service.cxx: function name change.

	* workben/addon_pkg/translation/en-US.txt: added Japanese text to test
	UTF-8 parsing.

2007-10-14  Kohei Yoshida  <kyoshida@novell.com>

	* README: changed instruction to skip running configure after 
	autogen.sh & removed the note about the configure script not checking
	the paths because it does now.
	
	* workben/addon_pkg/autogen.sh: run configure automatically.
	