@@ -1,0 +1,25 @@
+# Common strings
+72.Common.HelpText=
+73.Common.Title=
+76.Common.OK.HelpText=
+77.Common.OK.Label=OK
+80.Common.Cancel.HelpText=
+81.Common.Cancel.Label=Cancel
+84.Common.ConstRangeMismatch.HelpText=
+85.Common.ConstRangeMismatch.Label=The reference and constraint ranges do not match.
+86.Common.Label1.HelpText=
+87.Common.Label1.Label=Label1
+90.Common.SolutionNotFound.HelpText=
+91.Common.SolutionNotFound.Label=Solution could not be found
+94.Common.SolutionFound.HelpText=
+95.Common.SolutionFound.Label=Solution found
+98.Common.CellGeometriesDiffer.HelpText=
+99.Common.CellGeometriesDiffer.Label=Cell geometries differ
+102.Common.MaxIterationReached.HelpText=
+103.Common.MaxIterationReached.Label=Maximum iteration reached
+106.Common.StdException.HelpText=
+107.Common.StdException.Label=Standard exception caught
+110.Common.IterationTimedOut.HelpText=
+111.Common.IterationTimedOut.Label=Maximum iteration reached
+114.Common.GoalNotSet.HelpText=
+115.Common.GoalNotSet.Label=Goal is not set
