@@ -1,0 +1,20 @@
+# ConstEditDialog strings
+0.ConstEditDialog.HelpText=
+1.ConstEditDialog.Title=Constraint
+2.ConstEditDialog.ftLeft.HelpText=
+3.ConstEditDialog.ftLeft.Label=Cell Reference
+4.ConstEditDialog.ftRight.HelpText=
+5.ConstEditDialog.ftRight.Label=Constraint
+6.ConstEditDialog.editLeft.HelpText=
+7.ConstEditDialog.editLeft.Text=
+8.ConstEditDialog.editRight.HelpText=
+9.ConstEditDialog.editRight.Text=
+10.ConstEditDialog.lbEqual.HelpText=Equality
+11.lbEqual.StringItemList=<=
+12.lbEqual.StringItemList==
+13.lbEqual.StringItemList=>=
+14.ConstEditDialog.lbEqual.Text=
+15.ConstEditDialog.btnOK.HelpText=
+16.ConstEditDialog.btnOK.Label=OK
+17.ConstEditDialog.btnCancel.HelpText=
+18.ConstEditDialog.btnCancel.Label=Cancel
