@@ -1,0 +1,15 @@
+# OptionDialog strings
+19.OptionDialog.HelpText=
+20.OptionDialog.Title=Options
+21.OptionDialog.flOptions.HelpText=
+22.OptionDialog.flOptions.Label=Options
+23.OptionDialog.cbLinear.HelpText=
+24.OptionDialog.cbLinear.Label=Assume linear model
+25.OptionDialog.cbPositiveValue.HelpText=
+26.OptionDialog.cbPositiveValue.Label=Allow only positive values
+27.OptionDialog.cbIntegerValue.HelpText=
+28.OptionDialog.cbIntegerValue.Label=Allow only integer values
+29.OptionDialog.btnOK.HelpText=
+30.OptionDialog.btnOK.Label=OK
+31.OptionDialog.btnCancel.HelpText=
+32.OptionDialog.btnCancel.Label=Cancel
