@@ -1,5 +1,40 @@
 # SolverDialog strings
-0.SolverDialog.HelpText=
-1.SolverDialog.Title=線形ソルバー
-2.SolverDialog.btnClose.HelpText=
-3.SolverDialog.btnClose.Label=閉じる # このコメントはどうなるんだろう？
+33.SolverDialog.HelpText=
+34.SolverDialog.Title=\u7dda\u5f62\u30bd\u30eb\u30d0\u30fc
+35.SolverDialog.flModel.HelpText=
+36.SolverDialog.flModel.Label=Define Model
+37.SolverDialog.ftTargetCell.HelpText=
+38.SolverDialog.ftTargetCell.Label=Target Cell
+39.SolverDialog.editTargetCell.HelpText=
+40.SolverDialog.editTargetCell.Text=
+45.SolverDialog.ftDecVars.HelpText=
+46.SolverDialog.ftDecVars.Label=By changing cells
+47.SolverDialog.editVarCells.HelpText=
+48.SolverDialog.editVarCells.Text=
+49.SolverDialog.flConstraints.HelpText=
+50.SolverDialog.flConstraints.Label=Subject to the constraints
+51.SolverDialog.ListBox1.HelpText=
+52.SolverDialog.btnConstAdd.HelpText=
+53.SolverDialog.btnConstAdd.Label=Add
+54.SolverDialog.btnConstChange.HelpText=
+55.SolverDialog.btnConstChange.Label=Change
+56.SolverDialog.btnConstDelete.HelpText=
+57.SolverDialog.btnConstDelete.Label=Delete
+58.SolverDialog.btnSolve.HelpText=
+59.SolverDialog.btnSolve.Label=Solve
+60.SolverDialog.btnReset.HelpText=
+61.SolverDialog.btnReset.Label=Reset
+62.SolverDialog.btnOptions.HelpText=
+63.SolverDialog.btnOptions.Label=Options
+64.SolverDialog.btnSave.HelpText=
+65.SolverDialog.btnSave.Label=Save
+66.SolverDialog.btnLoad.HelpText=
+67.SolverDialog.btnLoad.Label=Load
+68.SolverDialog.btnClose.HelpText=
+69.SolverDialog.btnClose.Label=Close
+70.SolverDialog.ftObj.HelpText=
+71.SolverDialog.ftObj.Label=Goal
+116.SolverDialog.rbMax.HelpText=
+117.SolverDialog.rbMax.Label=Maximize
+118.SolverDialog.rbMin.HelpText=
+119.SolverDialog.rbMin.Label=Minimize
