@@ -1,5 +1,17 @@
 2007-10-26  Kohei Yoshida  <kyoshida@novell.com>
 
+	* source/ui/resmgr.cxx: removed commented out lines.
+	
+	* workben/addon_pkg/dialogs.ods: added for dialog string localization.
+	
+	* workben/addon_pkg/translation/Common_en_US.properties:
+	* workben/addon_pkg/translation/ConstEditDialog_en_US.properties:
+	* workben/addon_pkg/translation/OptionDialog_en_US.properties:
+	* workben/addon_pkg/translation/SolverDialog_ja_JP.properties: new 
+	localization string files.
+
+2007-10-26  Kohei Yoshida  <kyoshida@novell.com>
+
 	* source/inc/resmgr.hxx:
 	* source/ui/resmgr.cxx: modified parser to skip the leading number in 
 	each line.  We now pick up all *.properties files found in the 
